zlib-1.3.2/configure.log
--------------------
./configure
Thu Jun 18 10:28:54 PM CEST 2026
Checking for gcc...
=== ztest49260.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c ztest49260.c
... using gcc

Checking for compiler...
=== ztest49260.c ===
int foo() { return 0; }
===
gcc -c ztest49260.c
Checking for obsessive-compulsive compiler options...
=== ztest49260.c ===
int foo() { return 0; }
===
gcc -c -O3 -fPIC ztest49260.c

Checking for shared library support...
=== ztest49260.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c -O3 -fPIC ztest49260.c
gcc -shared -Wl,-soname,libz.so.1,--version-script,zlib.map -O3 -fPIC -o ztest49260.so ztest49260.o
Building shared library libz.so.1.3.2 with gcc.

=== ztest49260.c ===
#include <stdio.h>
#include <stdlib.h>
size_t dummy = 0;
===
gcc -c -O3 -fPIC ztest49260.c
Checking for size_t... Yes.

=== ztest49260.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest49260.c
Checking for off64_t... Yes.
Checking for fseeko... Yes.

=== ztest49260.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
gcc -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -o ztest49260 ztest49260.c
Checking for strerror... Yes.

=== ztest49260.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest49260.c
Checking for unistd.h... Yes.

=== ztest49260.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest49260.c
Checking for stdarg.h... Yes.

=== ztest49260.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest49260.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest49260.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -o ztest49260 ztest49260.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest49260.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest49260.c
Checking for return value of vsnprintf()... Yes.

=== ztest49260.c ===
#define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 ztest49260.c
Checking for attribute(visibility) support... Yes.
=== ztest49260.c ===
#ifndef __s390x__
    #error
#endif
===
gcc -c -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN ztest49260.c
ztest49260.c:2:6: error: #error 
    2 |     #error
      |      ^~~~~
(exit code 1)
Checking for s390x build ... No.

ALL = static shared all64
AR = ar
ARFLAGS = rc
CC = gcc
CFLAGS = -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN
CPP =
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = gcc -shared -Wl,-soname,libz.so.1,--version-script,zlib.map
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -O3 -fPIC -D_LARGEFILE64_SOURCE=1 -DHAVE_HIDDEN
SHAREDLIB = libz.so
SHAREDLIBM = libz.so.1
SHAREDLIBV = libz.so.1.3.2
STATICLIB = libz.a
TEST = all teststatic testshared test64
VER = 1.3.2
SRCDIR =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Linux
HAVE_S390X = 0
HAVE_S390X_VX = 0
VGFMAFLAG =
--------------------


